Views Calendar 5.x
==================

Version 2.0 dev
===============

Version 2.0-rc4
===============

- Add 'All day' themes for use in nodes and calendar psuedo nodes.
- #290826 Fix logic error that was missing date ranges that start before the current period by changing 'AND' to 'OR' in argument filter.
- #268669 Improve logic for splitting multi-day nodes across calendar dates, patch by emok.
- Add new DATE_FORMAT_DATE for date-only format that is used throughout the calendar.

Version 2.0-rc3
===============

- Make sure you can have arguments with summary views preceding the calendar.
- #258176 Make sure mini calendar links includes all other arguments.
- #239594 Make sure ical links with other arguments work correctly.
- #238287 Make sure calendars with other args (like OG) display default view.
- #269920 Fix breadcrumb on year view.
- #238369 Clean up breadcrumb when using calendar with other arguments.
- #282008 Fix back/next links on year view to omit mini links.
- Tweaked the jcalendar popup html and css a bit to keep title from popping out of the box in some themes.
- Bring the 5.2 and 6.2 calendar themes into alignment so both use the same styles and themes, including tableless back/next navigation links and themeable headers.
- #283902 Make sure date_format() isn't used on items with no calendar dates.
- #283206 Backport ability to use full name of week days in calendar view.
- #284760 Don't make weekno a link when there is no week view, eliminate some redundant date_format() calls.
- #276421 Use farbtastic color picker to set calendar stripes, and start process of making stripes more customizable.
- #282777 Try to make calendar creation in PHP4 more efficient to speed up creation of year calendar.

Version 2.0-rc2
===============

- #278391 Fix calendar popup position in Firefox.
- #278267 Add a theme for the jcalendar popup.
- #279169 Get rid of calendar_info() function in uninstall.