@@ -4,6 +4,8 @@ Views Calendar 5.x
 Version 2.0 dev
 ===============
 
+- #272330 Rework css to add background colors where colors are defined and group colors together in the file.
+
 Version 2.0-rc4
 ===============
 
